syntax = "proto3";

package protocol;

import "google/protobuf/any.proto";

service CoreService {
  rpc UploadFile(stream Chunk) returns (UploadFileResponse) {}
  rpc DownloadFile(DownloadFileParams) returns (stream ResChunk) {}
}

message Chunk {
  bytes content = 1;
  string fileName = 2;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadFileResponse {
  string message = 1;
  UploadStatusCode uploadStatusCode = 2;
}

enum FileType {
  Image = 0;
  Video = 1;
  Audio = 2;
  Archive = 3;
  Documents = 4;
  Font = 5;
  Others = 6;
}

message DownloadFileParams {
  string sourcePath = 1;
  FileType fileType = 2;
  google.protobuf.Any options = 3;
}

message ResChunk { bytes content = 1; }